fix line wrapping

--- a/static/style.css
+++ b/static/style.css
@@ -342,3 +342,7 @@ footer {
 .topic-bread {
     margin-bottom: 5px;
 }
+
+pre {
+    white-space: pre-wrap;
+}
